--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -20,6 +20,7 @@ services:
       - ./cocktails-api:/app
     depends_on:
       - db
+      - users
     command: uvicorn app:app --reload --host 0.0.0.0 --port 5000
     environment:
       - DATABASE_URL=postgresql://cocktails:lojfR21hDCzU6uCtg6q4@db:5432/cocktails
