--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -19,12 +19,13 @@ services:
     volumes:
       - ./cocktails-api:/app
     depends_on:
-      - db
       - users
-    command: uvicorn app:app --reload --host 0.0.0.0 --port 5000
+      - db
+    command: flask run --host 0.0.0.0 --port 5000 --reload
     environment:
       - DATABASE_URL=postgresql://cocktails:lojfR21hDCzU6uCtg6q4@db:5432/cocktails
       - USERS_DATABASE_URL=postgresql://cocktails:lojfR21hDCzU6uCtg6q4@db:5431/users
+    restart: unless-stopped
 
   db:
     image: postgres:latest
