--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -10,6 +10,8 @@ services:
       - "3000:3000"
     volumes:
       - ./cocktails-web:/app
+      - /app/node_modules
+      - /app/.next
 
   api:
     build: ./cocktails-api
