--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -14,6 +14,7 @@ services:
       - /app/.next
     environment:
       - NEXT_PUBLIC_API_URL=http://localhost:5000
+      - WATCHPACK_POLLING=true
 
   api:
     build: ./cocktails-api
