--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -41,6 +41,12 @@ services:
       - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
+      start_period: 1s
 
   ldap:
     image: bitnami/openldap:latest
